<resources>
    <string name="app_name">ContactsApp</string>
    <string name="display_name">Display_Name</string>

    <string name="contact_name_text">Contact Name</string>
    <string name="contact_mobile_text">Mobile</string>
    <string name="contact_work_text">Work</string>
    <string name="contact_custom_text">Custom</string>
    <string name="contact_home_text">Home</string>
    <string name="contact_org_text">Organization</string>
    <string name="contact_address_text">Address</string>


    <string name="contact_address_work">Work</string>
    <string name="contact_address_home">Home</string>
    <string name="contact_address_custom">Custom</string>

    <string name="contact_email_home">Email Home</string>
    <string name="contact_email_work">Email Work</string>
    <string name="contact_email_custom">Email Custom</string>

    <string name="contact_organization">Home_org</string>
    <string name="contact_user_image">Contact User Image</string>
    <string name="title_activity_update_contact">ScrollingActivity</string>


    <string name="action_settings">Help and feedback</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="work_number">Work Number</string>
    <string name="custom_number">Custom Number</string>
    <string name="email_home">Email Home</string>
    <string name="email_work">Email Work</string>
    <string name="organization_name">organization Name</string>


    <!--New Layout String-->
    <string name="contact_name">Name</string>
    <string name="organization">Organization</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_email">Email</string>
    <string name="contact_address">Address</string>
    <string name="label">Label</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="contact_update_btn">Update</string>
    <string name="save_new_contact">Save</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="contact_count">count</string>
    <string name="about">ABOUT</string>
    <string name="edit_contact">Edit contact</string>
</resources>