<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.UpdateContact">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/contact_update_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:onClick="pickImage"
            app:srcCompat="@drawable/ic_launcher_background" />

        <EditText
            android:id="@+id/contact_update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/contact_name_text"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/mobile_number"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/workNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/work_number"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/customNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_number"
            android:onClick="updateCustomNumber"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_address_text"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"/>


        <EditText
            android:id="@+id/update_address_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/contact_home_text"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/update_address_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/contact_work_text"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/update_address_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="updateAddressCustom"
            android:hint="@string/contact_custom_text"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/email_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_home"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/email_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/contact_email_work"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/email_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="updateEmailCustom"
            android:hint="@string/contact_custom_text"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>


        <EditText
            android:id="@+id/organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/organization"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/updateContactDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:onClick="updateContact"
            android:layout_gravity="bottom"
            android:text="@string/contact_update_btn"
            android:textColor="#fff"/>


    </LinearLayout>


</ScrollView>