<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:text="@string/contact_name"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/grey_border_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whiteBackground"
            android:padding="14dp"
            android:src="@drawable/call"
            android:tint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whiteBackground"
            android:padding="14dp"
            android:src="@drawable/message_24"
            android:tint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whiteBackground"
            android:padding="14dp"
            android:src="@drawable/video_cam_24"
            android:tint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whiteBackground"
            android:padding="14dp"
            android:src="@drawable/email"
            android:tint="@color/colorAccent" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/grey_border_line" />

    <!--Phone-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/call" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/phone_icon"
            android:orientation="vertical">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact_phone"
                android:textSize="24sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact_mobile_text"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/phone_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:background="@color/whiteBackground"
            android:src="@drawable/message_24"
            android:tint="@color/colorAccent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:layout_toStartOf="@+id/phone_cam"
            android:background="@color/whiteBackground"
            android:src="@drawable/video_cam_24"
            android:tint="@color/colorAccent" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/grey_border_line" />

    <!--Email-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mail_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/email" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/mail_icon"
            android:orientation="vertical">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact_email"
                android:textSize="24sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact_home_text"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/grey_border_line" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/organization_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/room" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/organization_icon"
            android:orientation="vertical">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact_address"
                android:textSize="24sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact_home_text"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/address_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:background="@color/whiteBackground"
            android:src="@drawable/outline_directions_24"
            android:tint="@color/colorAccent" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/grey_border_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/contact_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="18dp">

        <ImageView
            android:id="@+id/business_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/business"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/business_icon"
            android:text="@string/organization"
            android:textSize="24sp" />

    </RelativeLayout>

</LinearLayout>