<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/contact_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_layer_list" />


    <!--Name-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="18dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/person_icon"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:padding="4dp"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_toEndOf="@+id/person_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_name"/>
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <!--Company-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/business_icon"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/business"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:padding="4dp"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_toEndOf="@+id/business_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_contact_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/organization"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>


    <!--Phone-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/call_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:padding="4dp"
            android:src="@drawable/call" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_toEndOf="@+id/call_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_contact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:hint="@string/label"
                android:layout_toEndOf="@+id/call_icon">

                <AutoCompleteTextView
                    android:id="@+id/phone_auto_complete"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_alignBottom="@+id/phone_input_layout"/>

            </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <!--Email -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:padding="4dp"
            android:src="@drawable/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_toEndOf="@+id/email_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:hint="@string/label"
            android:layout_toEndOf="@+id/email_icon">

            <AutoCompleteTextView
                android:id="@+id/email_auto_complete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:layout_alignBottom="@+id/phone_input_layout"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <!--Address-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/room_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:padding="4dp"
            android:src="@drawable/room" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_toEndOf="@+id/room_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_contact_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_address"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:hint="@string/label"
            android:layout_toEndOf="@+id/room_icon">

            <AutoCompleteTextView
                android:id="@+id/address_auto_complete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_alignBottom="@+id/address_input_layout"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>




</LinearLayout>